# rust_stm32

./: .gdbinit  Cargo.toml  build.rs  run.bat  setup.bat
.cargo/: config
libs/peripheral/: Cargo.toml
libs/peripheral/src/: can.rs  comp.rs  crc.rs  dac.rs  dbgmcu.rs  exti.rs  flash.rs  fpu.rs  iwdg.rs  lib.rs  nvic.rs  opamp.rs  pwr.rs  rcc.rs  rtc.rs  syscfg.rs  tsc.rs  usb_fs.rs  wwdg.rs
libs/peripheral/src/adc/: adc1.rs  adc1_2.rs  adc2.rs  adc3.rs  adc3_4.rs  adc4.rs  mod.rs
libs/peripheral/src/dma/: dma1.rs  dma2.rs  mod.rs
libs/peripheral/src/gpio/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  gpioa.rs  gpiob.rs  gpioc.rs  gpiod.rs  gpioe.rs  gpiof.rs  mod.rs
libs/peripheral/src/i2c/: i2c1.rs  i2c2.rs
libs/peripheral/src/spi/: i2s2ext.rs  i2s3ext.rs  mod.rs  spi1.rs  spi2.rs  spi3.rs
libs/peripheral/src/tims/: mod.rs  tim1.rs  tim15.rs  tim16.rs  tim17.rs  tim2.rs  tim3.rs  tim4.rs  tim6.rs  tim7.rs  tim8.rs
libs/peripheral/src/usart/: mod.rs  uart4.rs  uart5.rs  usart1.rs  usart2.rs  usart3.rs
src/: address.rs  delay.rs  gpio.rs  log.rs  main.rs  rcc.rs  timer.rs  usb.rs
src/future/: mod.rs
