[package]
name = "rust_stm32"
version = "0.1.0"
authors = ["victor.koenders <victor.koenders@gmail.com>"]
build = "build.rs"

[dependencies.f3]
default-features = false
version = "0.3.0"

[dependencies]
stm32f30x-memory-map = "0.1.0"
# peripheral = { path = "libs/peripheral"}

[profile.release]
lto = true
